tests/fail/generic_union_resource.stderr
error[E0470]: Bare union is deprecated and removed in Toka. Use Tagged Enum or explicit type structure with 'core/mem::bit_cast' instead.
 --> tests/fail/generic_union_resource.tk:3:5
  |
 3 |     as ^val: T |   // T will be ^i32 (8 bytes)
  |     ^
